# AGNProtocol

./: .gitignore  AGENTS.md  KNOWN_ISSUES.md  LICENSE  Makefile  OPEN_SOURCE_RELEASE.md  PROJECT_BRIEF.md  README.md  RUNBOOK.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
agn2/: README.md  SYSTEM_IDENTITY.md  SYSTEM_LAYOUT.md  admin_profile.example.json  system_manifest.json
agn_api/: __init__.py  audit.py  auth.py  config.py  main.py  schemas_agn_console.py  sse.py  ssot_store.py  task_engine.py
config/: acceptance_spec_schema.json  action_protocol_schema.json  agent_role_contracts.json  evolution_pipeline_registry.json  federated_host_state_schema.json  infrastructure_registry.json  kirara_state_sync.json  lifecycle_policy.json  model_router.json  providers.json  reconstruction_tracker.json  recovery_policy.json  research_coordinator_playbook.json  research_coordinator_policy.json  research_exception_policy.json  research_profile.json  role_permissions.json  tool_reality_cards.example.json
documentation/: README.md
memory/: README.md
scripts/: ableton_als_migrator.py  acceptance_spec.py  action_protocol.py  action_runner.py  admin_command_protocol.py  admin_control_common.py  agent_collaboration.py  agent_runner.py  agn2_constitution.py  agn2_execution_workflow.py  agn2_governance_bridge.py  agn2_system.py  agn_artifact_bridge.py  agn_automation_designer.py  agn_bootstrap_check.py  agn_bounded_delegation.py  agn_browser_use_wrapper.py  agn_capability_rhythm.py  agn_cognitive_overlays.py  agn_control_plane_operator_posture.py  (+92 more)
(+303 files in other folders)
