[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agn"
version = "2.0.0"
description = "AGN2.0 — Human-sovereign, semi-autonomous agent system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]
mcp = ["mcp[cli]>=1.0.0,<2.0.0"]
memory = ["chromadb>=1.0.0,<2.0.0"]

[project.urls]
Repository = "https://github.com/Kircerta/AGNProtocol"
Documentation = "https://github.com/Kircerta/AGNProtocol/tree/main/documentation"

[tool.hatch.build.targets.wheel]
packages = ["src/agn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
